--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@wojtekmaj/react-daterange-picker": "^3.3.1",
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "file-saver": "^2.0.5",
+    "install": "^0.13.0",
     "jszip": "^3.5.0",
+    "moment": "^2.29.1",
+    "npm": "^7.24.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
